frame/support/test/tests/construct_runtime_ui/pallet_error_too_large.stderr
error[E0437]: type `BlockNumber` is not a member of trait `frame_system::Config`
  --> tests/construct_runtime_ui/pallet_error_too_large.rs:51:2
   |
51 |     type BlockNumber = u32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ not a member of trait `frame_system::Config`
